--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Huby.dev</title>
+</head>
+<body>
+  <p>Now that you don't have to be perfect, you can be good.</p>
+</body>
+</html>
